--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,9 @@ homepage = "https://github.com/vgloic/ducketh"
 repository = "https://github.com/vgloic/ducketh"
 keywords = ["cli", "search", "ethereum", "eth", "web3"]
 categories = ["command-line-utilities"]
+exclude = [
+    "test-data",
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
