--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -50,4 +50,6 @@ jobs:
             #     echo "SDKROOT=$(xcrun -sdk macosx --show-sdk-path)" >> $GITHUB_ENV
             #     echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
             - name: Build binaries
+              env:
+                SVM_TARGET_PLATFORM: ${{ matrix.job.svm_target_platform }}
               run: cargo build --release --target ${{ matrix.job.target }}
