add the build binaries step

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -56,3 +56,26 @@ jobs:
               env:
                 SVM_TARGET_PLATFORM: ${{ matrix.job.svm_target_platform }}
               run: cargo build --release --target ${{ matrix.job.target }}
+            - name: Archive binaries
+              id: artifacts
+              env:
+                  PLATFORM_NAME: ${{ matrix.job.platform }}
+                  TARGET: ${{ matrix.job.target }}
+                  ARCH: ${{ matrix.job.arch }}
+                  VERSION_NAME: ${GITHUB_REF_NAME}
+              shell: bash
+              run: |
+                  if [ "$PLATFORM_NAME" == "linux" ]; then
+                    tar -czvf "ducketh_${VERSION_NAME}_${PLATFORM_NAME}_${ARCH}.tar.gz" -C ./target/${TARGET}/release ducketh
+                    echo "file_name=ducketh_${VERSION_NAME}_${PLATFORM_NAME}_${ARCH}.tar.gz" >> $GITHUB_OUTPUT
+                  elif [ "$PLATFORM_NAME" == "darwin" ]; then
+                    # We need to use gtar here otherwise the archive is corrupt.
+                    # See: https://github.com/actions/virtual-environments/issues/2619
+                    gtar -czvf "ducketh_${VERSION_NAME}_${PLATFORM_NAME}_${ARCH}.tar.gz" -C ./target/${TARGET}/release ducketh
+                    echo "file_name=ducketh_${VERSION_NAME}_${PLATFORM_NAME}_${ARCH}.tar.gz" >> $GITHUB_OUTPUT
+                  else
+                    cd ./target/${TARGET}/release
+                    7z a -tzip "ducketh_${VERSION_NAME}_${PLATFORM_NAME}_${ARCH}.zip" ducketh.exe
+                    mv "ducketh_${VERSION_NAME}_${PLATFORM_NAME}_${ARCH}.zip" ../../../
+                    echo "file_name=ducketh_${VERSION_NAME}_${PLATFORM_NAME}_${ARCH}.zip" >> $GITHUB_OUTPUT
+                  fi
