--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -64,6 +64,7 @@ jobs:
                   ARCH: ${{ matrix.job.arch }}
               shell: bash
               run: |
+                  echo "REF NAME -> ${GITHUB_REF_NAME}";
                   if [ "$PLATFORM_NAME" == "linux" ]; then
                     tar -czvf "ducketh_${GITHUB_REF_NAME}_${PLATFORM_NAME}_${ARCH}.tar.gz" -C ./target/${TARGET}/release ducketh
                     echo "file_name=ducketh_${GITHUB_REF_NAME}_${PLATFORM_NAME}_${ARCH}.tar.gz" >> $GITHUB_OUTPUT
