--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -62,7 +62,7 @@ jobs:
                   PLATFORM_NAME: ${{ matrix.job.platform }}
                   TARGET: ${{ matrix.job.target }}
                   ARCH: ${{ matrix.job.arch }}
-                  VERSION_NAME: "${GITHUB_REF_NAME}"
+                  VERSION_NAME: ${{ github.ref_name }}
               shell: bash
               run: |
                   echo "VERSION NAME -> ${VERSION_NAME}";
