--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -46,6 +46,21 @@ jobs:
     strategy:
         matrix:
             job:
+                # The OS is used for the runner
+                # The platform is a generic platform name
+                # The target is used by Cargo
+                # The arch is either 386, arm64 or amd64
+                # The svm target platform to use for the binary https://github.com/roynalnaruto/svm-rs/blob/84cbe0ac705becabdc13168bae28a45ad2299749/svm-builds/build.rs#L4-L24
+                - os: ubuntu-20.04
+                  platform: linux
+                  target: x86_64-unknown-linux-gnu
+                  arch: amd64
+                  svm_target_platform: linux-amd64
+                - os: ubuntu-20.04
+                  platform: linux
+                  target: aarch64-unknown-linux-gnu
+                  arch: arm64
+                  svm_target_platform: linux-aarch64
                 - os: macos-latest
                   platform: darwin
                   target: x86_64-apple-darwin
@@ -56,6 +71,11 @@ jobs:
                   target: aarch64-apple-darwin
                   arch: arm64
                   svm_target_platform: macosx-aarch64
+                - os: windows-latest
+                  platform: win32
+                  target: x86_64-pc-windows-msvc
+                  arch: amd64
+                  svm_target_platform: windows-amd64
     name: ${{ matrix.job.target }} (${{ matrix.job.os }})
     runs-on: ${{ matrix.job.os }}
     steps:
@@ -63,12 +83,24 @@ jobs:
             - uses: dtolnay/rust-toolchain@stable
               with:
                   targets: ${{ matrix.job.target }}
-            # - name: Apple M1 setup
-            #   if: ${{ matrix.job.target == 'aarch64-apple-darwin' }}
-            #   run: |
-            #     echo "SDKROOT=$(xcrun -sdk macosx --show-sdk-path)" >> $GITHUB_ENV
-            #     echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
+
+            # Not yet understood
+            - name: Apple M1 setup
+              if: ${{ matrix.job.target == 'aarch64-apple-darwin' }}
+              run: |
+                  echo "SDKROOT=$(xcrun -sdk macosx --show-sdk-path)" >> $GITHUB_ENV
+                  echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
+
+            # Not yet understood
+            - name: Linux ARM setup
+              if: ${{ matrix.job.target == 'aarch64-unknown-linux-gnu' }}
+              run: |
+                  sudo apt-get update -y
+                  sudo apt-get install -y gcc-aarch64-linux-gnu
+                  echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
+
             - name: Build binaries
+              # Not yet understood
               env:
                 SVM_TARGET_PLATFORM: ${{ matrix.job.svm_target_platform }}
               run: cargo build --release --target ${{ matrix.job.target }}
