--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,6 +27,7 @@ jobs:
         
   # Changelog and release workflow extracted from https://github.com/foundry-rs/foundry/blob/master/.github/workflows/release.yml
   changelog:
+    needs: [tests, build, check-format]
     name: Build changelog
     runs-on: ubuntu-latest
     outputs:
@@ -85,24 +86,24 @@ jobs:
                   targets: ${{ matrix.job.target }}
 
             # Not yet understood
-            - name: Apple M1 setup
-              if: ${{ matrix.job.target == 'aarch64-apple-darwin' }}
-              run: |
-                  echo "SDKROOT=$(xcrun -sdk macosx --show-sdk-path)" >> $GITHUB_ENV
-                  echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
+            # - name: Apple M1 setup
+            #   if: ${{ matrix.job.target == 'aarch64-apple-darwin' }}
+            #   run: |
+            #       echo "SDKROOT=$(xcrun -sdk macosx --show-sdk-path)" >> $GITHUB_ENV
+            #       echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
 
-            # Not yet understood
-            - name: Linux ARM setup
-              if: ${{ matrix.job.target == 'aarch64-unknown-linux-gnu' }}
-              run: |
-                  sudo apt-get update -y
-                  sudo apt-get install -y gcc-aarch64-linux-gnu
-                  echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
+            # # Not yet understood
+            # - name: Linux ARM setup
+            #   if: ${{ matrix.job.target == 'aarch64-unknown-linux-gnu' }}
+            #   run: |
+            #       sudo apt-get update -y
+            #       sudo apt-get install -y gcc-aarch64-linux-gnu
+            #       echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
 
             - name: Build binaries
               # Not yet understood
-              env:
-                SVM_TARGET_PLATFORM: ${{ matrix.job.svm_target_platform }}
+              # env:
+                # SVM_TARGET_PLATFORM: ${{ matrix.job.svm_target_platform }}
               run: cargo build --release --target ${{ matrix.job.target }}
             - name: Archive binaries
               id: artifacts
