--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -27,7 +27,6 @@ jobs:
         
   # Changelog and release workflow extracted from https://github.com/foundry-rs/foundry/blob/master/.github/workflows/release.yml
   changelog:
-    needs: [tests, build, check-format]
     name: Build changelog
     runs-on: ubuntu-latest
     outputs:
@@ -43,7 +42,6 @@ jobs:
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   release:
-    needs: changelog
     strategy:
         matrix:
             job:
@@ -93,12 +91,12 @@ jobs:
             #       echo "MACOSX_DEPLOYMENT_TARGET=$(xcrun -sdk macosx --show-sdk-platform-version)" >> $GITHUB_ENV
 
             # # Not yet understood
-            # - name: Linux ARM setup
-            #   if: ${{ matrix.job.target == 'aarch64-unknown-linux-gnu' }}
-            #   run: |
-            #       sudo apt-get update -y
-            #       sudo apt-get install -y gcc-aarch64-linux-gnu
-            #       echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
+            - name: Linux ARM setup
+              if: ${{ matrix.job.target == 'aarch64-unknown-linux-gnu' }}
+              run: |
+                  sudo apt-get update -y
+                  sudo apt-get install -y gcc-aarch64-linux-gnu
+                  echo "CARGO_TARGET_AARCH64_UNKNOWN_LINUX_GNU_LINKER=aarch64-linux-gnu-gcc" >> $GITHUB_ENV
 
             - name: Build binaries
               # Not yet understood
